removing deprecated include code for include_tasks
Change-Id: I8d5220d702484954d7d1f9729d03b7c6ced96892

--- a/roles/abm-login-token/tasks/main.yml
+++ b/roles/abm-login-token/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: "Test for Root Repo Ready"
-  include: kubectl-presence.yml
+  include_tasks: kubectl-presence.yml
   vars:
     name: "root-reconciler"
     type: "deployment"
@@ -13,7 +13,7 @@
   - login-token
 
 - name: Display login token for server
-  include: get-login-token.yml
+  include_tasks: get-login-token.yml
   when:
     - (primary_cluster_machine is defined)
     - (primary_cluster_machine == true)
