--- a/roles/abm-software/tasks/external-secrets.yaml
+++ b/roles/abm-software/tasks/external-secrets.yaml
@@ -1,6 +1,6 @@
 # TODO: Setup a conditional for idempotency (does this already exist?)
 - name: "Test for External Secrets secret"
-  include: kubectl-presence.yml
+  include_tasks: kubectl-presence.yml
   vars:
     name: "gcp-store-creds"
     type: "secrets"
