--- a/roles/abm-post-install/tasks/main.yml
+++ b/roles/abm-post-install/tasks/main.yml
@@ -2,7 +2,7 @@
 
 ### Add Kube PS1
 - name: "Add Kube PS1 to all known users"
-  include: add-kube-ps1.yml
+  include_tasks: add-kube-ps1.yml
   become: true
   tags:
   - abm-post-install
@@ -55,7 +55,7 @@
 
 ### Setup CDI cpumanager flag for nodes
 - name: "Add CDI required cpumanager label for nodes"
-  include: create-cdi-node-label.yaml
+  include_tasks: create-cdi-node-label.yaml
   tags:
   - abm-post-install
   - cdi-install
@@ -63,14 +63,14 @@
 
 ### Install Auditd
 - name: "Setup Auditd service"
-  include: setup-auditd.yml
+  include_tasks: setup-auditd.yml
   tags:
   - abm-post-install
   - observability-setup
 
  ### Install Obeservability agents
 - name: "Setup Obeservability Agents on Physical"
-  include: setup-google-observability.yml
+  include_tasks: setup-google-observability.yml
   when: install_observability == true and (is_cloud_resource is undefined or is_cloud_resource == false)
   tags:
   - abm-post-install
