--- a/roles/ready-ubuntu/tasks/main.yml
+++ b/roles/ready-ubuntu/tasks/main.yml
@@ -108,7 +108,7 @@
 ## TODO: This does not allow for multiple cnucs to be setup at one time
 ## TODO: This also does not skip non cnucs
 - name: "SSH Key access to other nodes"
-  include: setup-ssh-pub-key-access.yml
+  include_tasks: setup-ssh-pub-key-access.yml
   tags:
   - abm-install
   - abm-ssh
@@ -133,13 +133,13 @@
   - docker
 
 - name: "Setup docker on host machine"
-  include: setup-docker-apt.yml
+  include_tasks: setup-docker-apt.yml
   when: ( docker_version.stdout == "" or docker_version.stdout is version('20.9.0', '<') )
   tags:
   - docker
 
 - name: "Setup VLAN Interfaces on Physical Hosts"
-  include: setup-vlan-interfaces.yml
+  include_tasks: setup-vlan-interfaces.yml
   when:
   - (setup_vlan == true) and (is_cloud_resource is undefined or is_cloud_resource == false)
   tags:
