--- a/inventory/group_vars/all.yaml
+++ b/inventory/group_vars/all.yaml
@@ -172,7 +172,6 @@ vlan_interfaces: []
 install_observability: false
 
 # All of the Service Accounts used in this solution
-## LONGHORN
 service_accounts: [
   {
     name: abm-gcr-agent,
@@ -196,6 +195,14 @@ service_accounts: [
     description: "ABM GKE Connect Register Account",
     roles: [
       "roles/gkehub.admin"
+    ]
+  },
+  {
+    name: acm-monitoring-agent,
+    keyfile: acm-monitoring-agent.json,
+    description: "ACM Monitoring Account",
+    roles: [
+      "roles/monitoring.metricWriter"
     ]
   },
   {
