removing popularity contest
Change-Id: I0fe7e86e9d3a83ed55d6dbbf7a6f7b1a84d6ec91
Bug: 240045636

--- a/roles/ready-ubuntu/tasks/main.yml
+++ b/roles/ready-ubuntu/tasks/main.yml
@@ -40,6 +40,15 @@
     # - linux-modules-extra-{{ uname_r }}
     state: latest
     update_cache: yes
+    autoclean: yes
+  tags:
+    - update-dependencies
+
+- name: Remove un-necessary dependencies
+  apt:
+    pkg:
+    - popularity-contest
+    state: absent
   tags:
     - update-dependencies
 
