switching to the proper use of import_tasks or include_tasks
Change-Id: I261cc409f2567fd1de9ce1c7a4d216f16ad70836

--- a/roles/abm-remove/tasks/main.yml
+++ b/roles/abm-remove/tasks/main.yml
@@ -46,7 +46,7 @@
   - never
 
 - name: Archive current cluster snapshots
-  include_tasks: remove-snapshot.yaml
+  import_tasks: remove-snapshot.yaml
   when:
     - (primary_cluster_machine is defined)
     - (primary_cluster_machine == true)
