--- a/roles/abm-install/tasks/main.yml
+++ b/roles/abm-install/tasks/main.yml
@@ -255,7 +255,7 @@
 
 ### Setup kubeconfig for all clusters
   - name: "Share kubeconfig with others in cluster"
-    include_tasks: share-kubeconfig.yml
+    import_tasks: share-kubeconfig.yml
     tags:
     - abm-post-install
     - abm-install
