--- a/roles/abm-install/vars/main.yml
+++ b/roles/abm-install/vars/main.yml
@@ -16,10 +16,9 @@ abm_install_user: "el-gato"
 
 # Cluster Configuration
 install_type: standalone
-multi_network_enabled: true
+multi_network_enabled: "{{ enable_multus_network | default('false', True) }}"
 enable_application_logging: true
 dataplane_v2: false # primarily vSphere installs
-enable_mcc_network: "{{ network_gateway_mcc }}"
 
 # Skip preflight checks?
 skip_preflight: false
