--- a/all-full-install.yml
+++ b/all-full-install.yml
@@ -12,6 +12,13 @@
       name: decrypt-ssh-key
   - name: Gathering Facts
     setup: {}
+    tags:
+    - always
+  - name: Populate service facts
+    service_facts:
+    tags:
+    - always
+
   roles:
     - validate
     - google-tools
