--- a/all-get-login-tokens.yml
+++ b/all-get-login-tokens.yml
@@ -7,6 +7,12 @@
       name: decrypt-ssh-key
   - name: Gathering Facts
     setup: {}
+    tags:
+    - always
+  - name: Populate service facts
+    service_facts:
+    tags:
+    - always
   roles:
     - abm-login-token
   vars:
