--- a/all-post-install.yml
+++ b/all-post-install.yml
@@ -12,6 +12,12 @@
       name: decrypt-ssh-key
   - name: Gathering Facts
     setup: {}
+    tags:
+    - always
+  - name: Populate service facts
+    service_facts:
+    tags:
+    - always
   roles:
     - abm-post-install
     - update-automation
