--- a/all-remove-abm-software.yml
+++ b/all-remove-abm-software.yml
@@ -5,7 +5,7 @@
 
 # NOTE: must specify `--tags never` on the CLI to run this
 
-- hosts: workers
+- hosts: alll
   become: true
   become_user: root
   gather_facts: false
@@ -15,23 +15,14 @@
       name: decrypt-ssh-key
   - name: Gathering Facts
     setup: {}
+    tags:
+    - always
+  - name: Populate service facts
+    service_facts:
+    tags:
+    - always
   roles:
     - abm-remove
   vars: []
   tags:
   - hardware
-
-- hosts: cloud_type_abm
-  become: true
-  become_user: root
-  pre_tasks:
-  - name: Decrypt SSH key
-    include_role:
-      name: decrypt-ssh-key
-  - name: Gathering Facts
-    setup: {}
-  roles:
-    - abm-remove
-  vars: []
-  tags:
-  - cloud
